# galaxy

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  docker-compose.yaml  galaxy  gtest
docs/: contributing.md  first_steps.md  grammar.md
docs/contributors_guide/: development_start_guide.md  start.md
examples/: a.glx  enum.glx  small.glx  switch_case.glx  switch_case_fixed.glx  test.glx
include/: freeTokens.h  lexer.h  utils.h
include/args/: definitions.h
include/ast/: core.h  definitions.h
include/backend/generator/: generate_ir.hpp
include/backend/generator/expressions/: generate_array_access.hpp  generate_assignment_expr.hpp  generate_binary_expr.hpp  generate_call.hpp  generate_expr.hpp  generate_identifier.hpp  generate_logical_not.hpp  generate_numeric_literal.hpp  generate_pre_decrement.hpp  generate_pre_increment.hpp  generate_sizeof.hpp  generate_string.hpp  generate_unary_bitwise_not.hpp  generate_unary_minus.hpp
include/backend/generator/parallel/: queue.hpp
include/backend/generator/statements/: generate_extern_stmt.hpp  generate_for_stmt.hpp  generate_function_declaration_stmt.hpp  generate_if_stmt.hpp  generate_outlined_for.hpp  generate_stmt.hpp  generate_variable_declaration_stmt.hpp
include/backend/generator/symbols/: function_symbol_table.hpp  identifier_symbol_table.hpp  iterator_stack.hpp  string_symbol_table.hpp  symbol_stack.hpp
include/backend/generator/types/: generate_type.hpp
include/backend/generator/utils/: generate_stop.hpp  return_id.hpp
include/frontend/: freeTokens.h  getTokenTypeName.h  types.h
include/frontend/ast/: core.h  definitions.h
include/frontend/checker/: common_types.h  core.h  core.hpp  dict.hpp  namespace.hpp  result.hpp  typedef.hpp
include/frontend/checker/expressions/: check_literal.hpp
include/frontend/lexer/: core.h  error.h  freeTokens.h
include/frontend/parser/: core.h
include/frontend/parser/expressions/: parse_args.h  parse_arguments_list.h  (+10 more)
include/lexer/: core.h
include/parser/: core.h  parse_numbers.h  print_ast.h
include/parser/expressions/: parse_expr.h  parse_object_expr.h  parse_primary_expr.h  parse_unary_expr.h
include/parser/printer/: print_ast.h  print_indent.h  visited.h
include/parser/statements/: parse_stmt.h
libs/: lib.ll  std.ll
src/: lexer.c  lexer.h  lexer_test.c  main.c  main.cpp  test.glx
src/args/: CMakeLists.txt
src/args/parser/: CMakeLists.txt  arg_parse.c  arg_parser.c
src/backend/: gstrdup.c  gstrdup.h  gstrdup_test.c
src/backend/generator/: CMakeLists.txt  generator.cpp  generator.test.cpp  output.ll
src/backend/generator/expressions/: generate_array_access.cpp  generate_assignment_expr.cpp  generate_binary_expr.cpp  generate_call.cpp  generate_expr.cpp  generate_identifier.cpp  generate_logical_not.cpp  generate_numeric_literal.cpp  generate_pre_decrement.cpp  generate_pre_increment.cpp  generate_sizeof.cpp  generate_string.cpp  generate_unary_bitwise_not.cpp  generate_unary_minus.cpp
src/backend/generator/parallel/: queue.cpp
src/backend/generator/statements/: generate_extern_stmt.cpp  generate_for_stmt.cpp  generate_function_declaration_stmt.cpp  generate_if_stmt.cpp  generate_outlined_for.cpp  generate_stmt.cpp  generate_variable_declaration_stmt.cpp
src/backend/generator/symbols/: function_symbol_table.cpp  identifier_symbol_table.cpp  iterator_stack.cpp  string_symbol_table.cpp  symbol_stack.cpp
src/backend/generator/types/: generate_type.cpp
src/backend/generator/utils/: generate_stop.cpp  return_id.cpp
src/frontend/: CMakeLists.txt  Makefile  freeTokens.c  getTokenTypeName.c
src/frontend/checker/: checker.c  checker.cpp
src/frontend/lexer/: CMakeList.txt  CMakeLists.txt  Makefile  lexer.c  lexer.test.c  lexer_error.c  lexer_tests
src/frontend/node_definitions/: CMakeLists.txt  ast.c
src/frontend/parser/: CMakeLists.txt  Makefile  parser.c  parser.test.c  print_ast.c
src/frontend/parser/expressions/: parse_args.c  parse_arguments_list.c  parse_array_access_expr.c  parse_array_expr.c  parse_arrays_expr.c  parse_assignment_expr.c  parse_call_expr.c  parse_call_member_expr.c  parse_expr.c  parse_logical_not_expr.c  parse_member_expr.c  parse_nested_ternary_expr.c  parse_object_expr.c  parse_primary_expr.c  parse_ternary_expr.c  parse_unary_expr.c
src/frontend/parser/expressions/binary_operations/: parse_additive_expr.c  parse_bitwise_expr.c  parse_equality_expr.c  parse_exponential_expr.c  parse_logical_expr.c  parse_logical_not_expr.c  parse_multiplicative_expr.c  parse_numbers.c  parse_relational_expr.c
src/frontend/parser/printer/: print_ast.c  print_indent.c  print_type.c  visited.c
src/frontend/parser/printer/nodes/: print_assignment.c  print_binary_expr.c  print_for.c  print_function.c  print_identifier.c  print_import.c  print_logical_not.c  print_minus.c  print_numeric_literal.c  print_object.c  print_package.c  print_pre_decrement.c  print_pre_increment.c  print_program.c  print_property.c  print_unary_bitwise_not.c  print_unary_minus.c  print_variable.c
src/frontend/parser/printer/nodes/expressions/: print_array.c  print_array_access.c  print_arrays_expr.c  print_assignment.c  print_binary_expr.c  print_boolean.c  print_call.c  print_enum.c  print_identifier.c  print_logical_not.c  print_numeric_literal.c  print_object.c  print_pre_decrement.c  print_pre_increment.c  print_property.c  print_return.c  print_sizeof.c  print_string.c  print_ternary.c  print_unary_bitwise_not.c  print_unary_minus.c
src/frontend/parser/printer/nodes/statements/: print_enum.c  print_extern.c  print_for.c  print_function.c  print_if.c  print_import.c  print_package.c  print_variable.c  print_while.c
src/frontend/parser/statements/: parse_decorator_stmt.c  parse_enum_stmt.c  parse_extern_stmt.c  parse_for_stmt.c  parse_function_declaration_stmt.c  parse_function_stmt.c  parse_if_stmt.c  parse_import_stmt.c  parse_package_stmt.c  parse_stmt.c  parse_variable_declaration_stmt.c  parse_while_stmt.c
src/frontend/parser/types/: parse_type.c
src/lexer/: lexer.c  lexer.test.c  lexer_error.c
(+77 files in other folders)
